--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "clipboard-copy": "^4.0.1",
     "faker": "^6.6.6",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "react-share": "^5.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
