--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-share": "^5.1.0",
+    "react-swipeable": "^7.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
