--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "clipboard-copy": "^4.0.1",
+    "crypto-js": "^4.2.0",
     "faker": "^6.6.6",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
@@ -22,9 +23,11 @@
     "react-router-dom": "^6.22.2",
     "react-share": "^5.1.0",
     "react-swipeable": "^7.0.1",
+    "zego-zim-web": "^2.15.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
