--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "clipboard-copy": "^4.0.1",
