--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.2",
     "react-share": "^5.1.0",
     "react-swipeable": "^7.0.1",
+    "zego-express-engine-webrtc": "^3.3.0",
     "zego-zim-web": "^2.15.0",
     "zustand": "^4.5.2"
   },
