--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.2",
     "react-share": "^5.1.0",
     "react-swipeable": "^7.0.1",
