--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.2",
     "clipboard-copy": "^4.0.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
     "faker": "^6.6.6",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
